2009-02-12  Nick Garnett  <nickg@ecoscentric.com>

	* cdl/spi_at91.cdl: Add a requires for CYGPKG_ERROR.

2009-02-11  Bart Veer  <bartv@ecoscentric.com>

	* src/spi_at91.c (cyg_spi_at91_bus_init): turn into a prioritized
	constructor, make it a static and rename.

	* cdl/spi_at91.cdl: remove src/spi_at91_init.cxx
	
	* src/spi_at91_init.cxx: removed, no longer needed.

2008-10-19  Igor B. Poretsky <poretsky@mlbox.ru>
	
	* src/spi_at91.c: Typo fixes from var_io.h.  Correctly calculate
	  the board rate. Before it was two times too fast.

2006-09-27  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/spi_at91.c (spi_at91_transaction_begin): Don't use #ifdef
	inside a macro invocation. The compiler throws a wobbly.

2006-09-07  John Eigelaar <jeigelaar@mweb.co.za>

	* src/spi_at91.c: Fixed the chip select functions.
	Changed the Mode Register setup as to disable the Mode Failure
	Detaction for variants that support it. The Mode Failure Detection
	breaks because NPCS0 is not connected, we are using GPIO, and is 
	thus floating. 

2006-06-01  John Eigelaar <jeigelaar@mweb.co.za>

	* src/spi_at91.c:
	* cdl/spi_at91.cdl:
	* include/spi_at91.h: Generalize so that multiple SPI
	busses can be driven.
	
2006-05-19  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/spi_at91.c: Use the AT91 GPIO/PIO macros to aid
	portability between different AT91 device.

2004-11-11  Sebastian Block <sebastianblock@gmx.net>

        * src/spi_at91.c: Fixed negation of the chip select signal when
	not using a 4 to 16 decoder

2004-10-13  Savin Zlobec  <savin@elatec.si> 

        * src/spi_at91.c: Fixed a typo in spi_at91_transfer reported by
        Nicolas Brouard.

2004-08-31  Savin Zlobec  <savin@elatec.si> 

        * include/spi_at91.h:
        * src/spi_at91.c:
        Moved SPI registers and bits defines to HAL headers, added support 
        for 4 to 16 decoder of chip select signals, support for transfers 
        larger than 2^16 and per device configurable delay between two 
        transfers.  